--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,25 @@ h6 {
   }
 }
 
+.btn-wtv{
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 4px;
+  transition: 0.5s;
+  color: #fff;
+  background: #1bb1dc;
+}
+
+.btn-wtv:hover{
+  background: #0a98c0;  
+  color: #fff;
+}
+
 /*--------------------------------------------------------------
 # Top Bar
 --------------------------------------------------------------*/
