--- a/css/style.css
+++ b/css/style.css
@@ -595,14 +595,14 @@ h6 {
   transition: .5s;
 }
 
-/* Services Section
+/* projects Section
 --------------------------------*/
 
-#services {
+#projects {
   padding: 60px 0 40px 0;
 }
 
-#services .box {
+#projects .box {
   padding: 30px;
   position: relative;
   overflow: hidden;
@@ -614,12 +614,12 @@ h6 {
   text-align: center;
 }
 
-#services .box:hover {
+#projects .box:hover {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 
-#services .icon {
+#projects .icon {
   margin: 0 auto 15px auto;
   padding-top: 12px;
   display: inline-block;
@@ -629,26 +629,26 @@ h6 {
   height: 60px;
 }
 
-#services .icon i {
+#projects .icon i {
   font-size: 36px;
   line-height: 1;
 }
 
-#services .title {
+#projects .title {
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
 }
 
-#services .title a {
+#projects .title a {
   color: #111;
 }
 
-#services .box:hover .title a {
+#projects .box:hover .title a {
   color: #1bb1dc;
 }
 
-#services .description {
+#projects .description {
   font-size: 14px;
   line-height: 28px;
   margin-bottom: 0;
